# windows_service

./: .gitignore  Cargo.toml
config/: windows_service.toml
src/: main.rs
